--- a/app/elements/word-board.html
+++ b/app/elements/word-board.html
@@ -10,7 +10,7 @@
   <template>
     <div id="word-board-word"><span id="my_word">{{myWord}}</span></div>
     <audio id="word_aud_elem" src="{{wordAudio}}" on-error="enableSynth" hidden></audio>
-    <word-service id="wservice" game-lang="{{gameLang}}" warray="{{warray}}"></word-service>
+    <word-service id="wservice" gl="{{gl}}" warray="{{warray}}"></word-service>
   </template>
 </dom-module>
 <script>
@@ -55,7 +55,7 @@
     },
     listeners: {
       'new-words': 'setWords',
-      'game-lang-changed': 'changeLanguage',
+      'gl-changed': 'changeLanguage',
       'earmodus-changed': 'hideWord',
       'tap': 'tapWord'
     },
@@ -86,6 +86,7 @@
     changeLanguage: function() {
       this.phraseArray = [];
       this.phraseIndex = 0;
+      this.$.wservice.changeJsonUrl();
     },
     setPhraseArray: function(gl, randomIndex, findex) {
       if(!findex) findex = (this.letterListBox.stripDiacritics) ? "ohne" : "word";
@@ -98,7 +99,7 @@
     },
     wordFilter: function(gl, randomIndex) {
       if(!this.letterListBox) this.init();
-      if(!gl) gl = this.gameLang;
+      if(!gl) gl = this.gl;
       if(!randomIndex) randomIndex = (this.wordArray[gl] && this.wordArray[gl].words) ? Math.floor(Math.random() * this.wordArray[gl].words.length) : 0;
       this.phraseIndex++;
       if(Object.keys(this.wordArray).length > 0 && this.wordArray[gl]) {
@@ -110,7 +111,7 @@
             }
           }
           this.ranWordIndex = randomIndex;
-          //console.log("wordArray.length: " + this.wordArray[this.gameLang].length + "\nthis.ranWordIndex: " + this.ranWordIndex);
+          //console.log("wordArray.length: " + this.wordArray[this.gl].length + "\nthis.ranWordIndex: " + this.ranWordIndex);
           this.phraseIndex = 0;
         } else {
           console.log(this.phraseArray[this.phraseIndex]);
@@ -142,7 +143,7 @@
       }
     },
     getCheckWord: function(gl, randomIndex) {
-      if(!gl) gl = this.gameLang;
+      if(!gl) gl = this.gl;
       if(!randomIndex) randomIndex = this.ranWordIndex;
       if(this.wordArray[gl] !== undefined && this.wordArray[gl].words !== undefined && randomIndex !== undefined && this.wordArray[gl].words.length !== 0) {
         var findex = (this.letterListBox.stripDiacritics) ? "ohne" : "word";
@@ -167,12 +168,12 @@
       }
     },
     getWordObj: function(gl, randomIndex) {
-      if(!gl) gl = this.gameLang;
+      if(!gl) gl = this.gl;
       if(!randomIndex) randomIndex = this.ranWordIndex;
       return this.wordArray[gl].words[randomIndex];
     },
     setDisplayWord: function(gl, randomIndex) {
-      if(!gl) gl = this.gameLang;
+      if(!gl) gl = this.gl;
       if(!randomIndex) randomIndex = this.ranWordIndex;
       if(!this.letterListBox) this.letterListBox = document.querySelector('letter-list');
       if(this.wordArray[gl]) {
@@ -187,7 +188,7 @@
       }
     },
     setWords: function(ev, gl) {
-      if(typeof gl !== "string") gl = this.gameLang;
+      if(typeof gl !== "string") gl = this.gl;
       if(!this.wordBoardWord) this.init();
       if(!this.wordArray.hasOwnProperty(gl)) {
         var items = this.$.wservice.warray;
@@ -202,13 +203,13 @@
       this.wordFilter();
     },
     revealWord: function(gl, randomIndex) {
-      if(!gl) gl = this.gameLang;
+      if(!gl) gl = this.gl;
       if(!randomIndex) randomIndex = this.ranWordIndex;
       var pauseLength = 1500;
       var findex = (this.letterListBox.stripDiacritics) ? "ohne" : "word";
       var word;
       
-      if(this.gameLang === "ko") {
+      if(this.gl === "ko") {
         word = window.Hangul.disassemble(this.wordArray[gl].words[randomIndex][findex].toLowerCase()).join('');
       } else {
         word = this.wordArray[gl].words[randomIndex][findex].toLowerCase();
@@ -251,7 +252,7 @@
         }
         this.$.word_aud_elem.play();
       } else {
-        this.playSynVoice(this.gameLang, this.myWord, 0.75, tapped);
+        this.playSynVoice(this.gl, this.myWord, 0.75, tapped);
       }
     },
     playSynVoice: function(gl, text, rate, tapped) {
